# ml-finance-suite

./: .gitignore  README.md  pyproject.toml
app/: main.py
