[project]
name = "ml-finance-suite"
version = "0.1.0"
authors = [{ name = "Chitrank Agnihoti", email = "chitrank2050@gmail.com" }]
description = "ML Finance Suite — End-to-end machine learning pipeline for financial data covering preprocessing, feature engineering, modeling, evaluation, explainability, and API deployment"
readme = "README.md"
requires-python = ">=3.12"

# Production dependencies
dependencies = [
  "imbalanced-learn>=0.14.1",
  "matplotlib>=3.10.8",
  "numpy>=2.4.2",
  "pandas>=3.0.1",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "shap>=0.49.1",
  "xgboost>=3.2.0",
]

[dependency-groups]
dev = ["ruff>=0.14.13"]
